--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --q-my-custom-color: #ff5722;
 }
 
 a {
